Fix loading spinner jumping about during loading

--- a/src/main/webapp/studio/static/themes/default/css/forms.css
+++ b/src/main/webapp/studio/static/themes/default/css/forms.css
@@ -4,9 +4,10 @@
     z-index: 2000;
 }
 
-#forms_layout .busy div.busyContainer {
+#forms_layout .busy div.busyContainer, #forms_layout div.busyContainer {
     position: relative;
 }
+
 /*
  App.View.FormList styles
  */
